--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
      height: 400px;
      border-radius: 20px;
      margin: 5px;
-     padding: 10px;
+     padding: 20px;
  }
 
  /* The class .logo is for the div which contains a logo for the company  */
@@ -36,7 +36,7 @@
      align-self: center;
      width: 420px;
      height: 105px;
-     margin: 5px;
+     margin: 25px;
  }
 
  /* This div below helps find the borders of each and every div that I have created in the login page  */
@@ -81,4 +81,16 @@
     padding: 5px;
     margin: 5px;
     font-size: 1.5em;
+}
+/* The class below is for styling the signup link at the bottom of the form, it is attached to a span element  */
+.signup-link{
+    color:#13505b;
+}
+
+/* The class below is for styling the forgot password link at he bottom of the form, it is attached to a span element  */
+.forgot-link{
+    color:#13505b;
+}
+p>a{
+    text-decoration:none;
 }
