--- a/css/home.css
+++ b/css/home.css
@@ -88,10 +88,14 @@ header>div>input{
 
 .see-more-div{
     background-color: #D7D9CE;
+    padding-bottom: 10px;
     color: #13505b;
-    width:calc(64%);
+    width:64%;
     height: 25px;
     margin-left:19.2%; 
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     
 }
 
