--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,12 @@
 p>a{
     text-decoration:none;
 }
+
+input{
+    border: 1px solid #1B7D90;
+    
+}
+::placeholder{
+    color: #1B7D90;
+    opacity: 1;
+}
