--- a/css/home.css
+++ b/css/home.css
@@ -156,3 +156,9 @@ header>div>input{
     text-transform: uppercase;
     font-weight: bolder;
 }
+
+.big-sale-image{
+    width: 200px;
+    height: 200px;
+    margin: 50px;
+}
