--- a/css/home.css
+++ b/css/home.css
@@ -9,9 +9,9 @@
     background-color: #D7D9CE;
     display: inline-flex;
     justify-content: space-evenly;
-    height: 30px;
+    height: 45px;
     margin-left: 15%;
-    padding: 10px;
+    /* padding: 10px; */
     /* border: 1px solid black; */
 }
 .logo-home{
@@ -22,13 +22,23 @@
     justify-content: space-between;
     margin-left: 100px;
 } */
-
+.nav-header{
+    /* border: 1px solid yellow; */
+    display: inline-flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
 .search-input{
     border-radius: 5px;
+    width: 200px;
 }
 
 .search-section{
     display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 230px;
+    /* border: 1px solid red; */
 }
 
 
@@ -162,3 +172,14 @@ header>div>input{
     height: 200px;
     margin: 50px;
 }
+
+.div-logo{
+    /* border: 1px solid green; */
+    width: 50px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1px;
+}
+/* Below are the CSS formatting for my icons in the project  */
