--- a/Angella's shop app/css/cart.css
+++ b/Angella's shop app/css/cart.css
@@ -32,7 +32,7 @@
     height: 20px;
     background-color: #13505b;
     border: none;
-    padding: 1;
+    padding: 1px;
 }
 
 .decremental-svg-file{
