--- a/clock/css/style.css
+++ b/clock/css/style.css
@@ -14,3 +14,9 @@ body{
     flex-direction: column;
     align-items: center;
 }
+.buttons{
+    width: 15em;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
