--- a/clock/css/style.css
+++ b/clock/css/style.css
@@ -20,3 +20,10 @@ body{
     flex-direction: row;
     justify-content: space-between;
 }
+
+button{
+    width: 5em;
+    height: 2em;
+    border-radius: 5px;
+    background-color: white;
+}
