I have completely designed the scoreboard from index.css file

--- a/scoreboard/css/index.css
+++ b/scoreboard/css/index.css
@@ -1,7 +1,7 @@
 .scoreboard{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    width: 30%;
+    width: 40%;
     font-family: 'Quicksand', sans-serif;
 }
 
@@ -9,10 +9,12 @@
 .scoreboard__score{
     padding: 10px;
     text-align: center;
+    font-size: 2em;
 }
 
 .scoreboard__name{
     font-weight: bold;
+    border-bottom: 1px solid #ddd;
 }
 
 .scoreboard__name-one{
@@ -21,4 +23,24 @@
 
 .scoreboard__name-two{
     color: blue;
+}
+
+.scoreboard__controls{
+    display: flex;
+    flex-grow: 1;
+}
+
+.scoreboard__control-button{
+    width: 100%;
+    font-size: 1.4em;
+    border: none;
+    cursor: pointer;
+}
+
+.scoreboard__control-button:hover{
+    background-color: rgb(144, 141, 141);
+}
+
+.scoreboard__control-button:active{
+    background-color: rgba(229, 232, 232, 0.867);
 }
